# renovate-pdm-groups-issue

./: pyproject.toml
sub_directory/: pyproject.toml
